[package]
name = "mai3-pumpfun-sdk"
version = "2.4.3"
edition = "2021"
authors = ["William <william@mai3.io>"]
repository = "https://github.com/MiracleAI-Labs/pumpfun-sdk"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "pumpfun-sdk", "cpi"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-spl = "0.30.1"
borsh = { version = "1.5.3", features = ["derive"] }
isahc = "1.7.2"
mpl-token-metadata = "5.1.0"
pumpfun-cpi = { path = "../pumpfun-cpi", version = "1.1.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
solana-sdk = "1.18.26"
tokio = "1.42.0"
futures = "0.3.31"
futures-util = "0.3.31"
base64 = "0.22.1"
bs58 = "0.5.1"
rand = "0.8.5"
bincode = "1.3.3"
reqwest = { version = "0.11.27", features = ["json"] }

